# cours-code

./: .gitignore
cutting-stock/: CMakeLists.txt  README.md
cutting-stock/cmake/: FindGurobi.cmake
cutting-stock/column-generation/src/: main.cpp
cutting-stock/common/: instance.hpp
cutting-stock/compact/src/: main.cpp
cutting-stock/scripts/: compare.sh  report.py
graph-coloring/: README.md
